--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "autoprefixer": "^10.4.20",
     "lucide-react": "^0.479.0",
     "postcss": "^8.4.49",
